# rezeptviewer

./: .gitignore  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements-migrate.txt  requirements.txt
.github/workflows/: build-deploy.yml  weekly-build.yml
app/: database.py  main.py
docker/: Dockerfile  Dockerfile.migrate  docker-compose.prod.yml
scripts/: backup.sh  deploy.sh
src/: database.py  main.py  migrate_robust.py  schema.py
static/: frontend.html  functions.js  style.css
