[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rezeptviewer"
version = "0.1.0"
description = "Recipe viewer application"
requires-python = ">=3.8"
dependencies = [
    "fastapi[standard]==0.116.1",
    "uvicorn[standard]==0.35.0",
    "sqlalchemy[asyncio]==2.0.42",
    "psycopg2-binary==2.9.10",
    "pydantic==2.11.7",
    "python-multipart==0.0.20",
    "jinja2>=3.1.5",
]

[project.optional-dependencies]
migrate = [
    "dbfread==2.0.7",
    "simpledbf==0.2.6",
    "chardet==5.2.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
"" = "."

